fix: fixed collapse handle styling

--- a/docs/.vuepress/styles/styles.css
+++ b/docs/.vuepress/styles/styles.css
@@ -136,3 +136,8 @@ h2 {
 h3 {
   font-size: 1.35rem;
 }
+
+/* Fix demo card margin */
+.card {
+  margin-top: 1rem;
+}
